Add Colors runner
This allows to search for colors and display a colored circle
of that color. The SVG named color is displayed when available
alongside RGB/CMYK values.

Activating the result copies the color to clipboard (both text
and a proper QColor). Drag and drop (e.g. to a graphics palette)
is also supported.

The color circle is drawn using a proper `QIconEngine` which
ensures that the circle is rendered crisp regardless of DPI
or icon size (KRunner vs. Kickoff).

Supported input:

* hex notation
    * both with (#AARRGGBB) and without (#RRGGBB) alpha channel
    * three letters (#RGB turns into #RRGGBB)
* instead of hash (#) also 0x and no prefix is allowed
* rgb notation
    * both with alpha (4 numbers) and without (3 numbers)
    * with or without parentheses
    * separated by spaces and/or commas
* SVG named colors (e.g. maroon, fuchsia, lightseelblue)

Comes with an autotest.

--- a/runners/CMakeLists.txt
+++ b/runners/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_definitions(-DKRUNNER_DISABLE_DEPRECATED_BEFORE_AND_AT=0x056300)
+add_subdirectory(colors)
 add_subdirectory(converter)
 add_subdirectory(datetime)
 add_subdirectory(katesessions)
