applets/fifteenPuzzle: use categorized logging
Fifteen Puzzle uses som uncategorized log messages. To reduce chatter
and give the user greater control over which log messages they want to
see, it should use categorized logging.

This change introduces a category and switches to qCDebug.

--- a/applets/fifteenPuzzle/CMakeLists.txt
+++ b/applets/fifteenPuzzle/CMakeLists.txt
@@ -10,5 +10,13 @@ target_sources(fifteenpuzzleplugin PRIVATE
     plugin/fifteenimageprovider.cpp
     plugin/fifteenpuzzleplugin.cpp
 )
+ecm_qt_declare_logging_category(fifteenpuzzleplugin
+    HEADER debug_p.h
+    IDENTIFIER "PLASMA_FIFTEENPUZZLE"
+    CATEGORY_NAME org.kde.plasma.fifteenpuzzle
+    DESCRIPTION "Plasma Fifteen Puzzle"
+    DEFAULT_SEVERITY Warning
+    EXPORT "PLASMA_FIFTEENPUZZLE"
+)
 target_link_libraries(fifteenpuzzleplugin PRIVATE Qt::Quick Qt::Qml)
 ecm_finalize_qml_module(fifteenpuzzleplugin)
