--- a/applets/grouping/CMakeLists.txt
+++ b/applets/grouping/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_definitions(-DTRANSLATION_DOMAIN=\"plasma_applet_org.kde.plasma.private.grouping\")
+add_definitions(-DTRANSLATION_DOMAIN=\"plasma_applet_org.kde.plasma.grouping\")
 
-plasma_install_package(package org.kde.plasma.private.grouping)
-kcoreaddons_add_plugin(org.kde.plasma.private.grouping SOURCES groupingcontainment.cpp INSTALL_NAMESPACE "plasma/applets")
-target_link_libraries(org.kde.plasma.private.grouping
+plasma_install_package(package org.kde.plasma.grouping)
+kcoreaddons_add_plugin(org.kde.plasma.grouping SOURCES groupingcontainment.cpp INSTALL_NAMESPACE "plasma/applets")
+target_link_libraries(org.kde.plasma.grouping
     Qt::Gui
     Qt::Quick
     Qt::DBus
@@ -12,5 +12,3 @@ target_link_libraries(org.kde.plasma.private.grouping
     KF6::XmlGui
     KF6::I18n
 )
-
-add_subdirectory(container)
