--- a/applets/notes/CMakeLists.txt
+++ b/applets/notes/CMakeLists.txt
@@ -2,14 +2,19 @@ add_definitions(-DTRANSLATION_DOMAIN="plasma_applet_org.kde.plasma.notes")
 
 plasma_install_package(package org.kde.plasma.notes)
 
-ecm_add_qml_module(notesplugin URI org.kde.plasma.private.notes)
+ecm_add_qml_module(notesplugin
+    URI org.kde.plasma.private.notes
+    GENERATE_PLUGIN_SOURCE
+    DEPENDENCIES QtQuick
+)
+
 target_sources(notesplugin PRIVATE
-    plugin/abstractnoteloader.cpp
-    plugin/documenthandler.cpp
-    plugin/filesystemnoteloader.cpp
-    plugin/note.cpp
-    plugin/notemanager.cpp
-    plugin/notesplugin.cpp
+    abstractnoteloader.cpp
+    documenthandler.cpp
+    filesystemnoteloader.cpp
+    note.cpp
+    notemanager.cpp
+    noteshelper.cpp
 )
 target_link_libraries(notesplugin PRIVATE
     Qt::Quick
