applets/comic: Port to plasma_add_applet

--- a/applets/comic/CMakeLists.txt
+++ b/applets/comic/CMakeLists.txt
@@ -2,20 +2,30 @@ add_definitions(-DTRANSLATION_DOMAIN=\"plasma_applet_org.kde.plasma.comic\")
 
 add_subdirectory(engine)
 
-set(comic_SRCS
-    comic.cpp
-    comicmodel.cpp
-    checknewstrips.cpp
-    comicdata.cpp
-    comicinfo.cpp
-    comicsaver.cpp
-    stripselector.cpp
-    activecomicmodel.cpp
+plasma_add_applet(org.kde.plasma.comic
+    QML_SOURCES
+        qml/ButtonBar.qml
+        qml/ComicBottomInfo.qml
+        qml/ComicCentralView.qml
+        qml/configAdvanced.qml
+        qml/configAppearance.qml
+        qml/configGeneral.qml
+        qml/FullViewWidget.qml
+        qml/ImageWidget.qml
+        qml/main.qml
+        qml/config.qml
+    CPP_SOURCES
+        comic.cpp
+        comicmodel.cpp
+        checknewstrips.cpp
+        comicdata.cpp
+        comicinfo.cpp
+        comicsaver.cpp
+        stripselector.cpp
+        activecomicmodel.cpp
 )
 
-kcoreaddons_add_plugin(org.kde.plasma.comic SOURCES ${comic_SRCS} INSTALL_NAMESPACE "plasma/applets")
-
-target_link_libraries(org.kde.plasma.comic
+target_link_libraries(org.kde.plasma.comic PRIVATE
     Qt::Gui
     Qt::Widgets
     Plasma::Plasma
@@ -28,5 +38,3 @@ target_link_libraries(org.kde.plasma.comic
 )
 
 install(FILES comic.knsrc DESTINATION ${KDE_INSTALL_KNSRCDIR})
-plasma_install_package(package org.kde.plasma.comic)
-
