applets/comic: rework configuration dialog
- make comic list a ListView instead of a FormLayout with repeater
- move Add New… button to header
- eliminate Advanced page by moving the single option elsewhere
- move middle click out of General tab to make it all about comics
- rename pages to fit the new divisions better
- tweak the wordings to be more clear
- improve translation contexts
- add PlaceholderMessage for empty provider list
- make comic options track current state properly
- minor cleanups

--- a/applets/comic/CMakeLists.txt
+++ b/applets/comic/CMakeLists.txt
@@ -7,9 +7,8 @@ plasma_add_applet(org.kde.plasma.comic
         qml/ButtonBar.qml
         qml/ComicBottomInfo.qml
         qml/ComicCentralView.qml
-        qml/configAdvanced.qml
-        qml/configAppearance.qml
-        qml/configGeneral.qml
+        qml/configBehavior.qml
+        qml/configComics.qml
         qml/FullViewWidget.qml
         qml/ImageWidget.qml
         qml/main.qml
