Port weather applet from dataengine
## General information
This port uses ions as a Qt Plugins instead of dataengines. Each Ion is running in another thread so there is no need to worry 
about blocking operations. If Ion is not in use for now it's thread is stopped. If Ion is not needed (no one uses it) it is removed
and plugin is unloaded.

The main logic of Ions (forecast request and parsing) are not changed, but there are some changes to adapt them to a new architecture.

An additional library weatherdata was created to share data between qml and Ion. The main classes are `Locations` and `Forecast` which
represent locations and forecasts respectively. `Locations` is just a `QAbstractListModel` where `Forecast` is a `Q_GADGET` which are
returned by an Ion. 

The request and update of forecasts and locations is happening by request to `WeatherDataMonitor` - the main class which loads, unloads 
plugins, controls theirs live time, create IonControl's etc. It is a singleton.

The request and update is happening through `LocationsData` and `ForecastData` classes. They are like containers with locations and forecast 
respectively. When locations or forecast is updated they emit signal. 

`IonControl` is a class that manages an ion. It handles multiple requests and controls ion's thread.

`IonControl` requests forecasts and locations from Ion through QPromise and then update ForecastData and LocationsData with them in the 
main thread so no need to use mutexes in `LocationsData` and `ForecastData`.

`LocationsControl` is just a QConcatenateTablesProxyModel which manages `LocationsData` for different providers (ions) and update its model
with models from them.

`ForecastControl` manages `Forecast` for an applet instance.

This MR also contains another MR: https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/761

I have tested it and it works for me but it would be good if someone else test this.

I have added some high-level diagrams to show how the weather app

--- a/applets/weather/CMakeLists.txt
+++ b/applets/weather/CMakeLists.txt
@@ -1,6 +1,12 @@
+# SPDX-FileCopyrightText: 2025 Bohdan Onofriichuk <bogdan.onofriuchuk@gmail.com>
+# SPDX-License-Identifier: BSD-3-Clause
+
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_applet_org.kde.plasma.weather\")
 
 install(FILES wind-arrows.svgz DESTINATION ${PLASMA_DATA_INSTALL_DIR}/desktoptheme/default/weather/)
+
+add_subdirectory(weatherdata)
+add_subdirectory(ions)
 
 plasma_add_applet(org.kde.plasma.weather
     QML_SOURCES
@@ -20,17 +26,36 @@ plasma_add_applet(org.kde.plasma.weather
     CPP_SOURCES
         util.cpp
         abstractunitlistmodel.cpp
-        locationlistmodel.cpp
+        locationscontrol.cpp
+        forecastcontrol.cpp
+        weatherdatamonitor_p.cpp
+        abstractunitlistmodel.cpp
+        ioncontrol_p.cpp
+        forecastdata.cpp
+        locationsdata.cpp
         types.h
     RESOURCES
         main.xml
     GENERATE_APPLET_CLASS
 )
 
+ecm_qt_declare_logging_category(org.kde.plasma.weather
+    HEADER weathercontroller_debug.h
+    IDENTIFIER WEATHER::CONTROLLER
+    CATEGORY_NAME org.kde.applets.weather.controller
+    DEFAULT_SEVERITY Info
+    DESCRIPTION "Weather controller"
+    EXPORT PLASMAWORKSPACE
+)
+
 target_link_libraries(org.kde.plasma.weather PRIVATE
-    Plasma::Plasma
-    Plasma::Plasma5Support
     KF6::UnitConversion
     KF6::I18n
+    Qt::Core
     Qt::Qml
+    Qt::Network
+    Qt::Gui
+    KF6::KIOCore
+    weatherion
+    weatherdata
 )
