[applets/weather] Use KDE plugin loading infrastructure
This simplifies the code and makes it consistent with other KDE plugins

--- a/applets/weather/ions/CMakeLists.txt
+++ b/applets/weather/ions/CMakeLists.txt
@@ -7,7 +7,7 @@ set(ionlib_SRCS
     ion.h
 )
 
-qt_add_library(weatherion STATIC ${ionlib_SRCS})
+add_library(weatherion STATIC ${ionlib_SRCS})
 
 set_property(TARGET weatherion PROPERTY POSITION_INDEPENDENT_CODE ON)
 
@@ -18,15 +18,6 @@ target_link_libraries(weatherion PUBLIC
     KF6::I18n
     Qt::Qml
 )
-
-# dir name where ion modules will be installed
-set(WEATHERION_INSTALL_DIR "ions")
-
-# add define because weatherdatamonitor need to know where to find ions
-configure_file(ion_config.h.in ion_config.h)
-
-# redefine KDE_INSTALL_PLUGINDIR variable to install ion plugins in the proper directory
-set(KDE_INSTALL_PLUGINDIR ${KDE_INSTALL_PLUGINDIR}/${WEATHERION_INSTALL_DIR})
 
 #add ions
 add_subdirectory(wetter.com)
