--- a/applets/weather/ions/bbcukmet/CMakeLists.txt
+++ b/applets/weather/ions/bbcukmet/CMakeLists.txt
@@ -1,12 +1,14 @@
 # SPDX-FileCopyrightText: 2025 Bohdan Onofriichuk <bogdan.onofriuchuk@gmail.com>
 # SPDX-License-Identifier: BSD-3-Clause
 
-set(bbcukmetplugin_SRCS
+kcoreaddons_add_plugin(bbcukmet INSTALL_NAMESPACE "plasma/weather_ions")
+
+target_sources(bbcukmet PRIVATE
     ion_bbcukmet.cpp
     ion_bbcukmet.h
 )
 
-ecm_qt_declare_logging_category(bbcukmetplugin_SRCS
+ecm_qt_declare_logging_category(bbcukmet
     HEADER bbcukmet_debug.h
     IDENTIFIER WEATHER::ION::BBCUKMET
     CATEGORY_NAME org.kde.weather.ion.bbcukmet
@@ -15,15 +17,7 @@ ecm_qt_declare_logging_category(bbcukmetplugin_SRCS
     EXPORT PLASMAWORKSPACE
 )
 
-qt_add_plugin(bbcukmet
-    SHARED
-    CLASS_NAME UKMETIon
-    ${bbcukmetplugin_SRCS}
-)
-
 target_link_libraries(bbcukmet PRIVATE
     weatherion
     KF6::KIOCore
 )
-
-install(TARGETS bbcukmet DESTINATION ${KDE_INSTALL_PLUGINDIR})
