--- a/applets/weather/ions/dwd/CMakeLists.txt
+++ b/applets/weather/ions/dwd/CMakeLists.txt
@@ -1,12 +1,14 @@
 # SPDX-FileCopyrightText: 2025 Bohdan Onofriichuk <bogdan.onofriuchuk@gmail.com>
 # SPDX-License-Identifier: BSD-3-Clause
 
-set(dwdplugin_SRCS
+kcoreaddons_add_plugin(dwd INSTALL_NAMESPACE "plasma/weather_ions")
+
+target_sources(dwd PRIVATE
     ion_dwd.cpp
     ion_dwd.h
 )
 
-ecm_qt_declare_logging_category(dwdplugin_SRCS
+ecm_qt_declare_logging_category(dwd
     HEADER dwd_debug.h
     IDENTIFIER WEATHER::ION::DWD
     CATEGORY_NAME org.kde.weather.ion.dwd
@@ -15,15 +17,7 @@ ecm_qt_declare_logging_category(dwdplugin_SRCS
     EXPORT PLASMAWORKSPACE
 )
 
-qt_add_plugin(dwd
-    SHARED
-    CLASS_NAME DWDIon
-    ${dwdplugin_SRCS}
-)
-
 target_link_libraries(dwd PRIVATE
     weatherion
     KF6::KIOCore
 )
-
-install(TARGETS dwd DESTINATION ${KDE_INSTALL_PLUGINDIR})
