--- a/applets/weather/ions/noaa/CMakeLists.txt
+++ b/applets/weather/ions/noaa/CMakeLists.txt
@@ -1,12 +1,14 @@
 # SPDX-FileCopyrightText: 2025 Bohdan Onofriichuk <bogdan.onofriuchuk@gmail.com>
 # SPDX-License-Identifier: BSD-3-Clause
 
-set(noaaplugin_SRCS
+kcoreaddons_add_plugin(noaa INSTALL_NAMESPACE "plasma/weather_ions")
+
+target_sources(noaa PRIVATE
     ion_noaa.cpp
     ion_noaa.h
 )
 
-ecm_qt_declare_logging_category(noaaplugin_SRCS
+ecm_qt_declare_logging_category(noaa
     HEADER noaa_debug.h
     IDENTIFIER WEATHER::ION::NOAA
     CATEGORY_NAME org.kde.weather.ion.noaa
@@ -15,16 +17,9 @@ ecm_qt_declare_logging_category(noaaplugin_SRCS
     EXPORT PLASMAWORKSPACE
 )
 
-qt_add_plugin(noaa
-    SHARED
-    CLASS_NAME NOAAIon
-    ${noaaplugin_SRCS}
-)
-
 target_link_libraries(noaa PRIVATE
     weatherion
     KF6::KIOCore
 )
 
-install(TARGETS noaa DESTINATION ${KDE_INSTALL_PLUGINDIR})
 install (FILES noaa_station_list.xml DESTINATION ${KDE_INSTALL_DATADIR}/plasma/weather)
