--- a/applets/weather/ions/wetter.com/CMakeLists.txt
+++ b/applets/weather/ions/wetter.com/CMakeLists.txt
@@ -1,12 +1,14 @@
 # SPDX-FileCopyrightText: 2025 Bohdan Onofriichuk <bogdan.onofriuchuk@gmail.com>
 # SPDX-License-Identifier: BSD-3-Clause
 
-set(wettercomplugin_SRCS
+kcoreaddons_add_plugin(wettercom INSTALL_NAMESPACE "plasma/weather_ions")
+
+target_sources(wettercom PRIVATE
     ion_wettercom.cpp
     ion_wettercom.h
 )
 
-ecm_qt_declare_logging_category(wettercomplugin_SRCS
+ecm_qt_declare_logging_category(wettercom
     HEADER wettercom_debug.h
     IDENTIFIER WEATHER::ION::WETTERCOM
     CATEGORY_NAME org.kde.weather.ion.wettercom
@@ -15,15 +17,7 @@ ecm_qt_declare_logging_category(wettercomplugin_SRCS
     EXPORT PLASMAWORKSPACE
 )
 
-qt_add_plugin(wettercom
-    SHARED
-    CLASS_NAME WetterComIon
-    ${wettercomplugin_SRCS}
-)
-
 target_link_libraries(wettercom PRIVATE
     weatherion
     KF6::KIOCore
 )
-
-install(TARGETS wettercom DESTINATION ${KDE_INSTALL_PLUGINDIR})
