applets/weather: check for forecast updates when system wakes up from sleep
Update the forecast, if outdated, after the system wakes up from sleep.
Otherwise, there can be long period between the start and end of sleep,
so the applet will show outdated forecast until the update timer will
be activated again.

BUG: 409393
FIXED-IN: 6.5.0

--- a/applets/weather/CMakeLists.txt
+++ b/applets/weather/CMakeLists.txt
@@ -52,6 +52,7 @@ target_link_libraries(org.kde.plasma.weather PRIVATE
     KF6::UnitConversion
     KF6::I18n
     Qt::Core
+    Qt::DBus
     Qt::Qml
     Qt::Network
     Qt::Gui
