[applets/quicklaunch] Port to plasma_add_applet

--- a/applets/quicklaunch/CMakeLists.txt
+++ b/applets/quicklaunch/CMakeLists.txt
@@ -1,3 +1,17 @@
-add_subdirectory(plugin)
+plasma_add_applet(org.kde.plasma.quicklaunch
+    QML_SOURCES
+        ConfigGeneral.qml
+        config.qml
+        IconItem.qml
+        main.qml
+        Popup.qml
+        UrlModel.qml
+        layout.js
+    CPP_SOURCES
+        quicklaunch_p.cpp
+    RESOURCES
+        main.xml
+    GENERATE_APPLET_CLASS
+)
 
-plasma_install_package(package org.kde.plasma.quicklaunch)
+target_link_libraries(org.kde.plasma.quicklaunch PRIVATE KF6::KIOWidgets KF6::JobWidgets)
