Enable qmllint in CI

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -45,3 +45,4 @@ RuntimeDependencies:
 Options:
  require-passing-tests-on: ['Linux', 'FreeBSD']
  cppcheck-ignore-files: ['templates/']
+ run-qmllint: true
