Deduplicate multiple applets asking to use the same note file
This also trashes notes instead of deleting them, which
makes them recoverable.

BUG:508572
BUG:453673

--- a/applets/notes/CMakeLists.txt
+++ b/applets/notes/CMakeLists.txt
@@ -21,5 +21,6 @@ target_link_libraries(notesplugin PRIVATE
     Qt::Quick
     KF6::CoreAddons
     KF6::Svg
+    KF6::KIOCore
 )
 ecm_finalize_qml_module(notesplugin)
