--- a/applets/notes/CMakeLists.txt
+++ b/applets/notes/CMakeLists.txt
@@ -19,5 +19,7 @@ target_sources(notesplugin PRIVATE
 target_link_libraries(notesplugin PRIVATE
     Qt::Quick
     KF6::CoreAddons
+    KF6::Svg
+    KF6::KIOCore
 )
 ecm_finalize_qml_module(notesplugin)
