dict: install dictionary icon unconditionally
The icon is used by the krunner plugin as well. Otherwise the icon is
only installed if Qt6WebEngineQuick is found at build time.

Move the file to shared dict code location to reflect the shared use by
both of the plugins.

Signed-off-by: Alfred Wingate <parona@protonmail.com>

--- a/dict/CMakeLists.txt
+++ b/dict/CMakeLists.txt
@@ -1,3 +1,8 @@
+ecm_install_icons(
+    ICONS sc-apps-accessories-dictionary.svgz
+    DESTINATION ${KDE_INSTALL_ICONDIR}
+)
+
 add_library(engine_dict_static STATIC dictengine.cpp)
 set_property(TARGET engine_dict_static PROPERTY POSITION_INDEPENDENT_CODE ON)
 target_compile_definitions(engine_dict_static PRIVATE -DTRANSLATION_DOMAIN="plasma_addons_engine_dict")
