--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,11 @@ find_package(KF6 ${KF6_MIN_VERSION} REQUIRED COMPONENTS
     Svg
 )
 
-find_package(Plasma5Support ${PROJECT_DEP_VERSION} REQUIRED)
+find_package(Plasma5Support ${PROJECT_DEP_VERSION})
+set_package_properties(Plasma5Support PROPERTIES
+    PURPOSE "Required at runtime for a few applets"
+    TYPE RUNTIME
+)
 find_package(Plasma ${PROJECT_DEP_VERSION} REQUIRED)
 find_package(PlasmaQuick ${PROJECT_DEP_VERSION} REQUIRED)
 
