applets/weather: Prefix shared libraries with "plasma"
Otherwise these libraries are named very generically, especially
weatherdata, making it hard to figure out where they're coming from and
potentially clashing with other libraries.

--- a/applets/weather/CMakeLists.txt
+++ b/applets/weather/CMakeLists.txt
@@ -57,6 +57,6 @@ target_link_libraries(org.kde.plasma.weather PRIVATE
     Qt::Network
     Qt::Gui
     KF6::KIOCore
-    weatherion
-    weatherdata
+    plasmaweatherion
+    plasmaweatherdata
 )
