--- a/applets/weather/ions/CMakeLists.txt
+++ b/applets/weather/ions/CMakeLists.txt
@@ -7,19 +7,20 @@ set(ionlib_SRCS
     ion.h
 )
 
-add_library(weatherion SHARED ${ionlib_SRCS})
+add_library(plasmaweatherion SHARED ${ionlib_SRCS})
 
-target_link_libraries(weatherion PUBLIC
-    weatherdata
+target_link_libraries(plasmaweatherion PUBLIC
+    plasmaweatherdata
     KF6::UnitConversion
     KF6::Holidays
     KF6::I18n
     Qt::Qml
 )
 
-generate_export_header(weatherion)
 
-install(TARGETS weatherion DESTINATION ${KDE_INSTALL_LIBDIR})
+generate_export_header(plasmaweatherion)
+
+install(TARGETS plasmaweatherion DESTINATION ${KDE_INSTALL_LIBDIR})
 
 #add ions
 add_subdirectory(wetter.com)
