applets/weather: Set version and soversion for shared libraries
Unversioned libraries installed to /lib can cause conflicts and
generally distributions don't like them.

BUG: 510064

--- a/applets/weather/ions/CMakeLists.txt
+++ b/applets/weather/ions/CMakeLists.txt
@@ -17,6 +17,10 @@ target_link_libraries(plasmaweatherion PUBLIC
     Qt::Qml
 )
 
+set_target_properties(plasmaweatherion PROPERTIES
+    VERSION     ${PROJECT_VERSION}
+    SOVERSION   ${PROJECT_VERSION_MAJOR}
+)
 
 generate_export_header(plasmaweatherion)
 
