applets/weather: Use target_sources to add sources to a target
No need to declare a variable when we have a proper command for it these
days. Also changes flow to "declare target - do things with target"
which is easier to follow.

--- a/applets/weather/ions/CMakeLists.txt
+++ b/applets/weather/ions/CMakeLists.txt
@@ -2,12 +2,13 @@
 # SPDX-License-Identifier: BSD-3-Clause
 
 # the Ion library
-set(ionlib_SRCS
+
+add_library(plasmaweatherion SHARED)
+
+target_sources(plasmaweatherion PRIVATE
     ion.cpp
     ion.h
 )
-
-add_library(plasmaweatherion SHARED ${ionlib_SRCS})
 
 target_link_libraries(plasmaweatherion PUBLIC
     plasmaweatherdata
