kwin/scripts: add "virtual desktops only on primary"
Adds a script that essentially makes it so that virtual desktops are
only on the primary screen, allowing windows on secondary screens to
always stay visible.

--- a/kwin/CMakeLists.txt
+++ b/kwin/CMakeLists.txt
@@ -1,6 +1,8 @@
 # SPDX-FileCopyrightText: 2023 Vlad Zahorodnii <vlad.zahorodnii@kde.org>
+# SPDX-FileCopyrightText: 2025 Kristen McWilliam <kristen@kde.org>
 #
 # SPDX-License-Identifier: BSD-3-Clause
 
 add_subdirectory(effects)
+add_subdirectory(scripts)
 add_subdirectory(windowswitchers)
