applets/webbrowser: use plasma_add_applet

--- a/applets/webbrowser/CMakeLists.txt
+++ b/applets/webbrowser/CMakeLists.txt
@@ -7,7 +7,13 @@ set_package_properties(Qt6WebEngineQuick PROPERTIES
 )
 
 if (Qt6WebEngineQuick_FOUND)
-
-plasma_install_package(package org.kde.plasma.webbrowser)
-
+    plasma_add_applet(org.kde.plasma.webbrowser GENERATE_APPLET_CLASS
+        QML_SOURCES
+            qml/main.qml
+            qml/ConfigAppearance.qml
+            qml/ConfigGeneral.qml
+            qml/config.qml
+        RESOURCES
+            main.xml
+    )
 endif()
