applets/grouping: Port to plasma_add_applet

--- a/applets/grouping/CMakeLists.txt
+++ b/applets/grouping/CMakeLists.txt
@@ -1,8 +1,18 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_applet_org.kde.plasma.grouping\")
 
-plasma_install_package(package org.kde.plasma.grouping)
-kcoreaddons_add_plugin(org.kde.plasma.grouping SOURCES groupingcontainment.cpp INSTALL_NAMESPACE "plasma/applets")
-target_link_libraries(org.kde.plasma.grouping
+plasma_add_applet(org.kde.plasma.grouping
+    QML_SOURCES
+        qml/CompactApplet.qml
+        qml/config.qml
+        qml/main.qml
+        qml/AbstractItem.qml
+        qml/PlasmoidItem.qml
+    CPP_SOURCES
+        groupingcontainment.cpp
+    RESOURCES
+        main.xml
+)
+target_link_libraries(org.kde.plasma.grouping PRIVATE
     Qt::Gui
     Qt::Quick
     Qt::DBus
