--- a/applets/mediaframe/CMakeLists.txt
+++ b/applets/mediaframe/CMakeLists.txt
@@ -1,11 +1,16 @@
-plasma_install_package(package org.kde.plasma.mediaframe)
-
-ecm_add_qml_module(mediaframeplugin URI org.kde.plasma.private.mediaframe)
-target_sources(mediaframeplugin PRIVATE
-    plugin/mediaframe.cpp
-    plugin/mediaframeplugin.cpp
+plasma_add_applet(org.kde.plasma.mediaframe GENERATE_APPLET_CLASS
+    QML_SOURCES
+        qml/main.qml
+        qml/ConfigBehavior.qml
+        qml/ConfigMedia.qml
+        qml/config.qml
+    CPP_SOURCES
+        mediaframe.cpp
+    RESOURCES
+        main.xml
 )
-ecm_qt_declare_logging_category(mediaframeplugin
+
+ecm_qt_declare_logging_category(org.kde.plasma.mediaframe
     HEADER debug_p.h
     IDENTIFIER "PLASMA_MEDIAFRAME"
     CATEGORY_NAME org.kde.plasma.mediaframe
@@ -14,11 +19,10 @@ ecm_qt_declare_logging_category(mediaframeplugin
     EXPORT "PLASMA_MEDIAFRAME"
 )
 
-target_link_libraries(mediaframeplugin PRIVATE
+target_link_libraries(org.kde.plasma.mediaframe PRIVATE
     Qt::Core
     Qt::Qml
     Qt::Quick
     KF6::I18n
     KF6::KIOCore
 )
-ecm_finalize_qml_module(mediaframeplugin)
