applets/diskquota: Port to plasma_add_applet

--- a/applets/diskquota/CMakeLists.txt
+++ b/applets/diskquota/CMakeLists.txt
@@ -1,29 +1,18 @@
-
-#######################################################################################
-# Package
-plasma_install_package(package org.kde.plasma.diskquota)
-
-
-#######################################################################################
-# Notes Library
 add_definitions(-DTRANSLATION_DOMAIN="plasma_applet_org.kde.plasma.diskquota")
 
-ecm_add_qml_module(diskquotaplugin
-    URI org.kde.plasma.private.diskquota
-    DEPENDENCIES QtCore
-    GENERATE_PLUGIN_SOURCE
+plasma_add_applet(org.kde.plasma.diskquota
+    QML_SOURCES
+        qml/main.qml
+        qml/ListDelegateItem.qml
+    CPP_SOURCES
+        DiskQuota.cpp
+        QuotaListModel.cpp
+        QuotaItem.cpp
+    GENERATE_APPLET_CLASS
 )
 
-target_sources(diskquotaplugin PRIVATE
-    DiskQuota.cpp
-    QuotaListModel.cpp
-    QuotaItem.cpp
-)
-
-target_link_libraries(diskquotaplugin PRIVATE
+target_link_libraries(org.kde.plasma.diskquota PRIVATE
     Qt::Quick
     KF6::CoreAddons
     KF6::I18n
 )
-
-ecm_finalize_qml_module(diskquotaplugin)
