applets/weather: make Warnings uncreatable type
The Warnings class is used in QML for its PriorityClass enum, but this
doesn't actually work as it's an anonymous type. So the code doesn't do
what it should, but prints runtime warnings regularly while warnings are
active.

Instead, we make it a regular, but uncreatable, QML_ELEMENT, and add the
warnings header to the applet sources.

BUG: 512258
FIXED-IN: 6.6.0

--- a/applets/weather/CMakeLists.txt
+++ b/applets/weather/CMakeLists.txt
@@ -34,6 +34,7 @@ plasma_add_applet(org.kde.plasma.weather
         forecastdata.cpp
         locationsdata.cpp
         types.h
+        weatherdata/warnings.h
     RESOURCES
         main.xml
     GENERATE_APPLET_CLASS
